feat: implementación de cálculos financieros centralizados y sincronización de datos de estudiantes reales. Se agregó totalNetoConDerechos y se mejoró la persistencia de beneficios.